--- a/hw/시험/mid3.html
+++ b/hw/시험/mid3.html
@@ -5,7 +5,7 @@
     <style>
          div#app {padding: 20px; margin: 30px auto; max-width: 400px; border:1px solid #ccc; box-shadow: 3px 3px 3px #aaa;}
          span {width: 50px ;height: 50px ;border: 1px solid gray; font-size: 12pt;}
-    </style>
+    </style> 
 </head> 
 <body>   
     <div id="app">     
@@ -17,7 +17,7 @@
         var app = new Vue({       
             el: '#app',       
             data: {   
-                number=0,
+                number='',
                 box : [],
                 visible = false
             }, 
